# controllers/bookController.js
@@ -77,6 +77,18 @@ export const getBook = async (req, res, next) => {
 export const createBook = async (req, res, next) => {
   // #swagger.tags = ['Könyvek']
   // #swagger.summary = 'Könyv létrehozása.'
+  /*  #swagger.parameters['body'] = {
+      in: 'body',
+        schema: { 
+          $author: "Sophie Johnson",
+          $title: "The Secret Island",
+          $ISBN: "9780123450000",
+          $publisher: "Publisher XYZ",
+          $publicationYear: 2019,
+          $amount: 25,
+          $price: 1899
+      }
+  } */
   try {
     const decoded = tokenVerify(req.headers.authorization.split(' ')[1]);
     if ((req.body.user && req.body.user.toString() !== decoded.id) && req.user.role !== 'admin') {
@@ -97,6 +109,18 @@ export const createBook = async (req, res, next) => {
 export const updateBook = async (req, res, next) => {
   // #swagger.tags = ['Könyvek']
   // #swagger.summary = 'Könyv módosítása.'
+  /*  #swagger.parameters['body'] = {
+      in: 'body',
+        schema: { 
+          $author: "Sophie Johnson",
+          $title: "The Secret Island",
+          $ISBN: "9780123450000",
+          $publisher: "Publisher XYZ",
+          $publicationYear: 2019,
+          $amount: 25,
+          $price: 1899
+      }
+  } */
   try {
     const decoded = tokenVerify(req.headers.authorization.split(' ')[1]);
 
